# GiverAI

./: CNAME  add_ai_vs_manual_tweets_post.py  add_ai_writing_tools_post.py  add_best_times_post.py  add_chatgpt_prompts_post.py  add_content_calendar_post.py  add_reddit_blog_post.py  add_thread_ideas_post.py  add_twitter_video_hacks_post.py  add_viral_tweets_ai_post.py  admin_setup.py  create_scheduled_emails.py  email.env  fix_db.py  main.py  migrate_to_postgres.py  pyproject.toml  requirements.txt  setup_blog.py  test.db  test.py  verify_backup.py
.github/workflows/: run_best_times_post.yml
alembic/: env.py
alembic/versions/: 620773f6dd74_add_suspended_columns_to_users.py
migrations/: migrate.py
static/: llms.txt  robots.txt  sitemap.xml  style.css
templates/: 400.html  403.html  404.html  423.html  500.html  account.html  account_deleted.html  api_docs.html  blog_index.html  blog_post.html  checkout_success.html  complete_onboarding.html  contact.html  dashboard.html  email_change_failed.html  email_change_success.html  error.html  faq.html  forgot_password.html  history.html  index.html  ip_banned.html  login.html  logout.html  maintenance.html  onboarding.html  pricing  pricing.html  privacy  privacy.html  recover_username.html  register.html  register_success.html  resend_verification.html  reset_password.html  reset_password_error.html  reset_success.html  suspended.html  team.html  terms.html  (+4 more)
templates/admin/: activity.html  appeals.html  ban-ip.html  dashboard.html  live-activity
templates/templates/: verification_failed.html
