[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.10,<3.12"
dependencies = [
    "fastapi>=0.116.1",
    "jinja2>=3.1.6",
    "python-jose[cryptography]>=3.5.0",
    "openai>=1.98.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.42",
    "stripe>=12.4.0",
    "uvicorn>=0.35.0",
    "bcrypt==4.0.1",
]
